base passes impl etc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 project(tensor)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(tensor 
-    main.cpp 
+    test.cpp 
     ops.cpp 
     types.cpp
+    passes.cpp
 )
