--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ else()
 endif()
 
 add_library(frontend src/frontend.cpp include/frontend.h)
+add_library(optimizers src/optimizers.cpp include/optimizers.h)
 add_library(ops src/ops.cpp include/ops.h)
 add_library(types src/types.cpp include/types.h)
 add_library(passes src/passes.cpp include/passes.h)
@@ -29,16 +30,5 @@ add_executable(main src/main.cpp)
 
 target_link_libraries(frontend nlohmann_json::nlohmann_json)
 target_link_libraries(passes nlohmann_json::nlohmann_json)
-target_link_libraries(main frontend types ops passes ${OPS_GPU_LIB} nlohmann_json::nlohmann_json)
-
-# Testing with Catch2
-# find_package(Catch2 3 REQUIRED)
-
-# enable_testing()
-
-# add_executable(test_types tests/test_types.cpp)
-# target_link_libraries(test_types types Catch2::Catch2WithMain)
-
-# include(CTest)
-# include(Catch)
-# catch_discover_tests(test_types)
+target_link_libraries(optimizers nlohmann_json::nlohmann_json)
+target_link_libraries(main optimizers frontend types ops passes ${OPS_GPU_LIB} nlohmann_json::nlohmann_json)
