gpu on device update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,13 @@ find_package(CUDA)
 if (CUDA_FOUND)
     enable_language(CUDA)
     set(CMAKE_CUDA_STANDARD 17)
+    # for older compilers and cmake
+    # set(CMAKE_CUDA_ARCHITECTURES 86)
     message("Building with GPU support")
     add_library(gpu_exec src/gpu_exec.cu include/gpu_exec.h)
-    target_link_libraries(gpu_exec PRIVATE cuda)
+    target_link_libraries(gpu_exec PRIVATE cublas)
     set(OPS_GPU_LIB gpu_exec)
+    add_compile_definitions(CUDA_FOUND) 
 else()
     message("Building with CPU support")
     set(OPS_GPU_LIB "")
